--- a/src/preface.tex
+++ b/src/preface.tex
@@ -50,8 +50,9 @@ You should find that it matches exactly the snippets of code provided in the boo
 and reformatted for brevity.
 
 
-Rob Hogan, Dublin 2022-2023 \\
-\href{https://mastodon.social/@mwenge}{\textcolor{blue}{@mwenge}}
+Rob Hogan \href{https://mastodon.social/@mwenge}{\textcolor{blue}{@mwenge}}\\
+Dublin 2023 \\
+
 \clearpage
 \vspace*{\fill}
 \begin{figure}[H]
