--- a/src/level_data.tex
+++ b/src/level_data.tex
@@ -158,7 +158,7 @@ UpperPlanetShipsLoop
     RTS
 \end{lstlisting}
 
-Notice that the \icode{\$06} was originally stored in a position in the array \icode{upperPlanetAttackShipsColorArray}.
+Notice that the \icode{\$06} was originally stored in a position in the array \icode{upperPlanet\-AttackShipsColorArray}.
 This happened in an earlier routine that loads the majority of the data for a level:
 
 
@@ -1397,7 +1397,7 @@ flying UFOs this is the default explosion animation.
   }\caption[position=top]{The sprites used to animate the collision explosion.}
 \end{figure}
 
-These bytes are only inspected when responding to a collision. The routine \icode{UpdateEnergyLevelsAfterCollision}
+These bytes are only inspected when responding to a collision. The routine \icode{Update\-EnergyLevelsAfterCollision}
 first establishes if the enemy saps energy from the gilby by inspecting Byte 35. Once the updated player energy
 is calculated the collision explosion data is loaded.
 
