--- a/src/copyright.tex
+++ b/src/copyright.tex
@@ -16,6 +16,10 @@
 \end{figure}
 
 \vspace*{\fill}
+For my beloved wife Edna.\\
+Thank you for your love and understanding.\\
+\bigskip
+\vspace*{\fill}
 \textcopyright\ Rob Hogan 2022-2023, All Rights Reserved. \\
 \textbf{Edition Date:} \today
 
