Fix bold font, copyright notice Make some reamining code inline

--- a/src/book.tex
+++ b/src/book.tex
@@ -273,7 +273,7 @@ pdfkeywords={C64, 6502, Llamasoft, Iridis Alpha, Jeff Minter}%
 \lstloadlanguages{[6502]Assembler}
 
 % KANJIS!
-\usepackage{CJKutf8}
+%\usepackage{CJKutf8}
 
 % Inline code
 \usepackage{xcolor}
