--- a/src/copyright.tex
+++ b/src/copyright.tex
@@ -20,7 +20,8 @@ For my beloved wife Edna.\\
 Thank you for your love and understanding.\\
 \bigskip
 \vspace*{\fill}
-\textcopyright\ Rob Hogan 2022-2023, All Rights Reserved. \\
+
+\textcopyright\ Rob Hogan \the\year{}, All Rights Reserved. \\
 \textbf{Edition Date:} \today
 
 \doclicenseThis
