Use different background color for code

--- a/src/book.tex
+++ b/src/book.tex
@@ -192,7 +192,7 @@ pdfkeywords={C64, 6502, Llamasoft, Iridis Alpha, Jeff Minter}%
 
 \usepackage{fancyvrb}
 
-\definecolor{bg_color}{HTML}{EEEEEE}
+\definecolor{bg_color}{HTML}{fffFfb}
 
 % Copy part of a file to a temporary file.
 % This function is necessary when listing snippets from our
