Use a new callout style and fix formatting

--- a/src/archaeo.tex
+++ b/src/archaeo.tex
@@ -452,7 +452,7 @@ Audiogenic and so on. Luigi di Fraia maintains a utility called tapclean that do
 these loaders and thanks to him we have a disassembled version of the loader we've just found on the Iridis Alpha tape. It has the
 quintessentially 1980s moniker 'MegaSave' and as you can see in the listing reproduced below is relatively compact.
 
-\lstinputlisting[caption=The data we have just loaded\, translated back into assembly language. This is the MegaSave loader.]
+\lstinputlisting[basicstyle=\tiny,caption=The data we have just loaded\, translated back into assembly language. This is the MegaSave loader.]
 {src/archaeo/megasave/loader.asm}
 
 What does MegaSave do that makes it so much faster than the default C64 tape loader? The simple answer is that it cuts corners
