--- a/src/bugs.tex
+++ b/src/bugs.tex
@@ -3,7 +3,13 @@
 \lstset{style=6502Style}
 
 \section{The Byte that Broke}
-\begin{q}{Jeff Minter's Newsletter 'The Nature of the Beast' August 1986\cite{beast}}
+\begin{definition}[Jeffrey Says]
+\setlength{\intextsep}{0pt}%
+\setlength{\columnsep}{3pt}%
+\begin{wrapfigure}{l}{0.12\textwidth}
+\includegraphics[width=\linewidth]{src/callout/ia.jpg} 
+\end{wrapfigure}
+\small
 We must apologise to some of the earliest purchasers of IA, as well... it
 seems that some data was corrupted during the production phase of the
 data duplication, and the first few hundred copies of the game used to bug
@@ -11,7 +17,7 @@ out if you lost at the Bonus Phase All the buggy copies known of have
 been replaced, and all current tapes are fine, but if you find you have a
 buggy version you should send it back to those awfully nice Hewsons
 people and they ll give you an unglitchified one,
-\end{q}
+\end{definition}
 
 What happened is that the master tape had dropped the very last byte in the second
 section of game data on the tape.
